Task5/nginx-services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-domain
---
# Сервис 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  namespace: web-domain
  labels:
    role: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  namespace: web-domain
  labels:
    role: front-end
spec:
  selector:
    app: nginx-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# Сервис 2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api-app
  namespace: web-domain
  labels:
    role: back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
  namespace: web-domain
  labels:
    role: back-end-api
spec:
  selector:
    app: nginx-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# Сервис 3
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nadmin-front-end-app
  namespace: web-domain
  labels:
    role: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-3
  template:
    metadata:
      labels:
        app: nginx-3
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
  namespace: web-domain
  labels:
    role: admin-front-end
spec:
  selector:
    app: nginx-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# Сервис 4
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nadmin-back-end-api-app
  namespace: web-domain
  labels:
    role: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-4
  template:
    metadata:
      labels:
        app: nginx-4
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  namespace: web-domain
  labels:
    role: admin-back-end-api
spec:
  selector:
    app: nginx-4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
